Fixed sassy share z-index
		sassy share was overlapping the menu

--- a/wp-content/themes/Jason Debus Heigl Foundation/style.css
+++ b/wp-content/themes/Jason Debus Heigl Foundation/style.css
@@ -1172,6 +1172,7 @@ img.aligncenter {
 	position: absolute !important;
 	top: -11px !important;
 	left: -50px !important;
+	z-index: 1;
 }
 .single-blog .heateorSssSharingArrow{
 	display: none !important;
